--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
   <groupId>com.master</groupId>
   <artifactId>oauth-server</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>oauth-server</name>
   <description>oauth-server</description>
   <properties>
@@ -97,6 +97,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.6.6</version>
         <configuration>
           <excludes>
             <exclude>
